<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Pabasara.selecet_language">

    <TextView
        android:id="@+id/tv_selectLanguage"
        android:layout_width="219dp"
        android:layout_height="77dp"
        android:layout_marginTop="114dp"
        android:layout_marginBottom="53dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Select_Lanuage"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toTopOf="@+id/englishBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/englishBtn"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:shadowColor="#888888"
        android:text="@string/English"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/sinhalaBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectLanguage" />

    <android.widget.Button
        android:id="@+id/sinhalaBtn"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#FFFFFF"
        android:shadowColor="#888888"
        android:text="@string/Sinhala"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/TamilBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishBtn" />

    <android.widget.Button
        android:id="@+id/TamilBtn"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#FFFFFF"
        android:shadowColor="#888888"
        android:text="@string/Tamil"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/getstartedBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sinhalaBtn" />

    <android.widget.Button
        android:id="@+id/getstartedBtn"
        android:layout_width="208dp"
        android:layout_height="57dp"
        android:layout_marginBottom="129dp"
        android:text="@string/Getstarted"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:background="@drawable/submitratebtn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TamilBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>