<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Pabasara.forgot_password">


    <TextView
        android:id="@+id/tvforgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/forgotpwd"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="@+id/tv_pwd_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pwd_txt"
        android:layout_width="314dp"
        android:layout_height="102dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="36dp"
        android:text="@string/forgotpwdtext"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bx_reset_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="292dp"
        android:layout_height="61dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="284dp"
        android:hint="@string/resetPWDemail"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_forgotpwd_enteremail"
            android:layout_width="match_parent"
            android:layout_height="51dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/sendBtn"
        android:layout_width="292dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="@string/send"
        android:background="@drawable/submitratebtn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bx_reset_password" />

</androidx.constraintlayout.widget.ConstraintLayout>