<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context="Dilshan.RateService">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="181dp"
        android:layout_marginTop="88dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/rate_dp"
            android:layout_width="101dp"
            android:layout_height="114dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rate_title"
            android:layout_width="243dp"
            android:layout_height="27dp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_bold"

            android:textAlignment="center"
            android:textSize="18dp"
            card_view:layout_constraintEnd_toEndOf="@+id/rate_dp"
            card_view:layout_constraintHorizontal_bias="0.697"
            card_view:layout_constraintStart_toStartOf="@+id/rate_dp"
            card_view:layout_constraintTop_toBottomOf="@+id/rate_dp" />

        <TextView
            android:id="@+id/rate_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.7"

            android:textAlignment="center"
            card_view:layout_constraintEnd_toEndOf="@+id/rate_title"
            card_view:layout_constraintStart_toStartOf="@+id/rate_title"
            card_view:layout_constraintTop_toBottomOf="@+id/rate_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RatingBar
        android:id="@+id/ratingBar_ratingInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="@color/material_pink"
        card_view:layout_constraintBottom_toTopOf="@+id/guideline7"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        card_view:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_begin="371dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_begin="52dp" />

    <CheckBox
        android:id="@+id/checkBox_rate_1"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:text="@string/problem_still_occuring"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_2"
        android:layout_width="321dp"
        android:fontFamily="@font/opensans_regular"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/exchanged_confirmed_but_not_received"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_3"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/time_taken_beyond_3_days"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_4"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/service_not_professional"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_5"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:layout_marginTop="160dp"
        android:text="@string/lack_of_competency"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_7"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:layout_marginTop="192dp"
        android:text="@string/promoters"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <CheckBox
        android:id="@+id/checkBox_rate_6"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="321dp"
        android:layout_height="32dp"
        android:layout_marginTop="128dp"
        android:text="@string/inappropriate_language_behaviour"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/guideline8"
        card_view:layout_constraintTop_toBottomOf="@+id/checkBox_rate_1"
        card_view:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_begin="623dp" />

    <android.widget.Button
        android:id="@+id/SubmitRateBtn"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/submitratebtn"
        android:text="@string/rate_service"
        android:textAllCaps="false"
        android:textColor="@color/white"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.5"
        card_view:layout_constraintStart_toEndOf="@+id/SubmitRateBackBtn"
        card_view:layout_constraintTop_toTopOf="@+id/guideline9" />

    <android.widget.Button
        android:id="@+id/SubmitRateBackBtn"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/cancelbtn"
        android:text="@string/cancel"
        android:textAllCaps="false"
        card_view:layout_constraintEnd_toStartOf="@+id/SubmitRateBtn"
        card_view:layout_constraintHorizontal_bias="0.5"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="@+id/guideline9" />

    <!--    this is the navigationBar, copy this bottom whole
thing and past it in any-->
    <!--    xml file that the navigationBar is needed-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/drawer_item"
        app:itemTextColor="@color/drawer_item"
        app:itemBackground="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>